# discord-music-player-bot

./: .env.example  .gitignore  README.md  lazy_queue.py  main.py  pyproject.toml  requirements.txt  server_handler.py  song_queue.py
