[tool.poetry]
name = "ds-player-bot"
version = "0.1.0"
description = "Public Discord bot for playing music"
authors = ["People"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.6.0"
youtube-dl = "^2021.12.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
